<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_image_picker_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/gap_normal"
    android:layout_marginBottom="@dimen/gap_normal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_image_picker_icon_card"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:foreground="@drawable/black_gradient"
            android:scaleType="centerCrop"
            android:src="@drawable/blank_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_picker_banner_alt" />

        <ImageView
            android:id="@+id/iv_image_picker_icon_folder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/gap_normal"
            android:src="@drawable/ic_folder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_button_pick_image_folder_alt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_normal"
            android:text="@string/btn_pick_image"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image_picker_icon_folder"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>